# RelationGraph

./: .drone.yml  .gitignore  .gitmodules  .vc.yaml  Cargo.toml  Dockerfile  Makefile  catalog-info.yaml  devspace.yaml  load-alert-rules.sh  mkdocs.yml  openapi.json
.cargo/: audit.toml
cmd/: Cargo.toml  k8s-rule-config.yaml  k8s-rule.yaml
cmd/src/: error.rs  main.rs
docs/: Declarative relations.pptx  Prometheus Metrics Schema.pptx  Role-based authorization.pptx  cmd.md  data-model.md  deploy.md  development.md  engine.md  in-memory-repr.md  lib.md  readme.md  release.md  status-and-alerts.md  transaction-example.excalidraw  transactions.md  wasm.md
docs/rustdoc/: lib.md  wasm.md
engine/: Cargo.toml
engine/src/: alerts.rs  app.rs  app_data.rs  auth.rs  changes.rs  connector.rs  dashboards.rs  error.rs  events.rs  items.rs  main.rs  metrics.rs  packages.rs  queries.rs  roles.rs  status.rs  transactions.rs  types.rs  views.rs
engine/src/prom_schema/: browse.rs  generate.rs  mod.rs
engine/src/utils/: bitcode.rs  json.rs  mod.rs  yaml.rs
lib/: Cargo.toml
lib/benches/: query.rs  serde.rs
lib/src/: delegatable.rs  error.rs  ids.rs  lib.rs  metrics.rs  status.rs
lib/src/alerts/: alert.rs  alert_map.rs  annotation.rs  mod.rs  prom_rules.rs  rule.rs  state.rs
lib/src/items/: augmented.rs  db.rs  mod.rs  resolved.rs  serial.rs  transaction.rs
lib/src/query/: filter.rs  mod.rs  resolved.rs  selector.rs  serial.rs  test.rs
lib/src/query/info/: mod.rs  patterns.rs  resolved.rs  serial.rs
lib/src/state/: resolved.rs  serial.rs
lib/src/stylesheet/: mod.rs  resolved.rs  serial.rs
lib/src/types/: connections.rs  connector.rs  mod.rs  name.rs  resolved.rs  serial.rs
lib/src/views/: dashboard.rs  mod.rs  view.rs
lib/tests/: elastic_query.rs  search_domain.rs  templating.rs  transactions.rs
lib/tests/cases/: mod.rs
tests/: context-query.json
tests/kubernetes/: items.json  query-result.json  query_computing.json  query_workloads.json  replace-items.json  run-query.sh  test-k8s.json  upload-alerts.sh
tests/kubernetes/alerts/: cpu-usage.config.yaml  cpu-usage.spec.yaml  memory-usage.config.yaml  memory-usage.spec.yaml
tests/kubernetes/pkgs/: jaeger.json  kubernetes.json
tests/networking/: items.json  query.json
tests/networking/pkgs/: builtin.json  networking.json
wasm/: Cargo.toml  Makefile
wasm/src/: lib.rs
wasm/test/: metrics.json  package.json  pod-metrics.json  test.ts  tsconfig.json
