[package]
name = "relation-graph-cmd"
description = "ContinuousC backend (command line interface)"
version = "0.1.2-acc.48"
authors = ["Maarten Deprez <mdp@continuousc.eu>"]
repository = "https://github.com/ContinuousC/RelationGraph.git"
license = "Elastic-2.0"
edition = "2021"
publish = false


[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.103"
serde_yaml = "0.9.27"
thiserror = "1.0.44"
env_logger = "0.10.0"

relation-graph = { version = "=0.1.4-acc.48" }
prometheus-core = { version = "=0.1.2-acc.8" }
prometheus-api = { version = "=0.1.2-acc.21" }
prometheus-expr = { version = "=0.1.2-acc.8" }
prometheus-schema = { version = "=0.1.25-acc.23" }
dbschema = { version = "0.1.31" }
dbschema-elastic = { version = "0.1.0" }
