[package]
name = "relation-graph-engine"
description = "ContinuousC backend"
version = "0.1.5-acc.52"
authors = [
    "Maarten Deprez <mdp@continuousc.eu>",
    "André Bongima <abo@continuousc.eu>",
]
repository = "https://github.com/ContinuousC/RelationGraph.git"
license = "Elastic-2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "parking_lot",
    "chrono",
] }
actix-web = { version = "4.5", features = ["rustls-0_23"] }
parking_lot = "0.12.1"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.113"
serde_cbor = "0.11.2"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = [
    "macros",
    "fs",
    "net",
    "signal",
    "parking_lot",
    "time",
] }
serde_with = "3.1.0"
semver = { version = "1.0.18", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
clap = { version = "4.4.4", features = ["derive", "env"] }
rustls = "0.23"
# env_logger = "0.10.0"
log = "0.4.20"
chrono = "0.4.31"
reqwest = { version = "0.12", features = ["json", "trust-dns", "native-tls"] }
url = "2.4.1"
futures = "0.3.28"
serde_yaml = "0.9.27"
chrono-tz = { version = "0.8.4", features = ["serde"] }
tracing = "0.1.40"
tracing-actix-web = { version = "0.7.11", features = ["opentelemetry_0_27"] }
reqwest-tracing = { version = "0.5.5", features = ["opentelemetry_0_27"] }
reqwest-middleware = { version = "0.4", features = ["json"] }
opentelemetry = { version = "0.27", features = ["logs"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
tracing-opentelemetry = "0.28"
opentelemetry-otlp = "0.27"
mimalloc = "0.1.39"
async-recursion = "1.1.0"
h2 = "0.3.26"
schemars = "0.8"
apistos = "0.2.4"

rpc = { version = "0.1.37", registry = "si", features = ["opentelemetry"] }
dbdaemon-api = { version = "=0.1.5-acc.4", registry = "si" }
dbdaemon-types = { version = "=0.1.1-acc.2", registry = "si" }
dbschema = { version = "0.1.30", registry = "si", features = ["schemars"] }
graph = { registry = "si", version = "0.1.6", features = ["serde"] }
# graph = { path = "../../graph", version = "0.1.5", features = ["serde"] }
relation-graph = { version = "=0.1.4-acc.48", registry = "si", features = [
    "apistos",
    "tokio",
] }
prometheus-core = { version = "=0.1.2-acc.8", registry = "si", features = [
    "schemars",
] }
prometheus-api = { version = "=0.1.2-acc.21", registry = "si", features = [
    "schemars",
] }
prometheus-expr = { version = "=0.1.2-acc.8", registry = "si", features = [
    "schemars",
] }
prometheus-schema = { version = "=0.1.25-acc.23", registry = "si", features = [
    "schemars",
    "apistos",
    "tokio",
] }
value = { registry = "si", version = "0.1.10" }
tap = "1.0.1"
itertools = "0.13.0"
bitcode = { version = "0.6.3", features = ["serde"] }
bincode = "1.3.3"

[dev-dependencies]
dbschema-elastic = { version = "0.1.0", registry = "si" }
