[package]
name = "relation-graph-wasm"
description = "ContinuousC backend (webassembly library)"
version = "0.1.8-acc.79"
authors = [
    "Maarten Deprez <mdp@continuousc.eu>",
    "André Bongima <abo@continuousc.eu>",
]
repository = "https://github.com/ContinuousC/RelationGraph.git"
license = "Elastic-2.0"
edition = "2021"
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "-all"]

[lib]
crate-type = ["cdylib"]

[dependencies]
tsify = { registry = "si", version = "0.4.6-si", features = ["js"] }
serde = { version = "1.0.188", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
serde_json = "1.0.105"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.20"
chrono = { version = "0.4.31", features = ["serde"] }
web-sys = { version = "0.3.67", features = [
    "Performance",
    "Blob",
    "Request",
    "Response",
    "RequestInit",
    "Headers",
    "ReadableStream",
    "ReadableStreamByobReader",
    "ReadableStreamGetReaderOptions",
    "ReadableStreamReaderMode",
] }
bitcode = { version = "0.6.3", features = ["serde"] }
bincode = "1.3.3"
itertools = "0.13"
reqwest = "0.12.8"
thiserror = "2.0.11"

value = { registry = "si", version = "0.1.14" }
unit = { registry = "si", version = "0.1.15", features = [
    "serialize_as_string",
    "tsify",
] }
relation-graph = { version = "=0.1.4-acc.48", registry = "si", features = [
    "tsify",
] }
prometheus-api = { version = "=0.1.2-acc.21", registry = "si", features = [
    "tsify",
] }
prometheus-core = { version = "=0.1.2-acc.8", registry = "si", features = [
    "tsify",
] }
prometheus-expr = { version = "=0.1.2-acc.8", registry = "si", features = [
    "tsify",
    "schema",
    "api",
] }
prometheus-schema = { version = "=0.1.25-acc.23", registry = "si", features = [
    "tsify",
] }
graph = { version = "0.1.6", registry = "si" }
jaeger-anomaly-detection = { version = "=0.1.0-acc.34", registry = "si", features = [
    "tsify",
] }
